--- a/package.json
+++ b/package.json
@@ -99,7 +99,8 @@
   },
   "devDependencies": {
     "less": "^4.1.1",
-    "less-loader": "7.3.0"
+    "less-loader": "7.3.0",
+    "stylelint": "^13.13.1"
   },
   "jest": {
     "roots": [
